refining like icons sizes and button sizes to prevent jumpy effect during animation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -557,8 +557,8 @@ header {
 }
 
 .liking {
-  width: 2.4rem;
-  height: 2.4rem;
+  width: 38px;
+  height: 38px;
   cursor: pointer;
   display: flex;
   align-items: center;
