--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -32,8 +32,8 @@
 
 // restaurants
 .liking {
-  width: 2.4rem;
-  height: 2.4rem;
+  width: 38px;
+  height: 38px;
   cursor: pointer;
   @include mx.center-by-flex;
   align-self: baseline;
